# ahlt

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  REFACTORING_SUMMARY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  package-lock.json  package.json  seed_test_data.sql
docs/: ADMIN_REDESIGN_ANALYSIS.md  AGILE_PATTERNS.md  BACKLOG.md  MEETING_LIFECYCLE_QUICKSTART.md  Task-19-route-wiring-e2e-tests.md  css-modularization.md  handler-patterns.md  sveltekit-feasibility-review.md  task-19-completion-summary.md
examples/: generate_hash.rs
migrations/: 20260221_initial.down.sql  20260221_initial.up.sql
scripts/: README.md  css-extract.py  setup-css-build.sh  split-css.js  test_admin_screens.py  users-table.test.mjs  verify-css.js
src/: db.rs  errors.rs  lib.rs  main.rs  schema.sql  templates_structs.rs
templates/: account.html  base.html  dashboard.html  login.html  menu_builder.html  settings.html
test_data/: phase2b_complete_workflow.db-shm  phase2b_complete_workflow.db-wal  phase2b_e2e.db-shm  phase2b_e2e.db-wal  phase2b_e2e_61233.db-shm  phase2b_e2e_61233.db-wal  phase2b_relation_types.db-shm  phase2b_relation_types.db-wal
tests/: abac_test.rs  api_v1_test.rs  auth_test.rs  calendar_confirmation_e2e.rs  coa_test.rs  data_manager_test.rs  governance_test.rs  graph_sync_test.rs  meeting_test.rs  minutes_test.rs  opinion_relation_test.rs  opinion_test.rs  permission_test.rs  phase2a_integration_test.rs  phase2b_e2e_test.rs  pipeline_integration_test.rs  (+11 more)
(+470 files in other folders)
