[package]
name = "ahlt"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-session = { version = "0.10", features = ["cookie-session"] }

askama = "0.14"

rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

argon2 = "0.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
