[package]
name = "ahlt"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-ws = "0.3"
tokio = { version = "1", features = ["time", "sync", "macros"] }

askama = "0.14"

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "migrate"] }
neo4rs = "0.8"

argon2 = "0.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
rand = "0.9"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
actix-rt = "2.11"
serde_urlencoded = "0.7"
regex = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "migrate"] }
